# nihaisha-nishi-tcm

./: .env.example  .gitignore  README.md  SKILL.md  install_as_skill.sh  pyproject.toml
agents/: openai.yaml
docs/: BUILD_AND_UPDATE.md  RAG_GRAPH_MODE.md  README.en.md  USE_AND_RISK_NOTICE.md
evals/: baseline_v1.json  golden_v1.jsonl
nihaisha_kg/: __init__.py  assets.py  cli.py  diagnostics.py  evaluation.py  faiss_artifacts.py  fusion.py  normalization.py  pdf_vector.py  rerank.py
references/: acupuncture-screenshot-evidence.md  acupuncture.md  bagang-screenshot-evidence.md  bagang.md  bencao-screenshot-evidence.md  bencao.md  clinical-cases-screenshot-evidence.md  clinical-cases.md  ebooks.md  fuyang-screenshot-evidence.md  fuyang.md  huangdi-screenshot-evidence.md  huangdi.md  index.md  jingui-screenshot-evidence.md  jingui.md  learning-entry.md  lesson-map.md  liangdong.md  notes-acupuncture-dacheng-scan-essence.md  notes-bencao-scan-essence.md  notes-bencao.md  notes-huangdi-scan-essence.md  notes-huangdi.md  notes-jingui.md  notes-shanghan-scan-essence.md  notes-shanghan.md  screenshot-evidence.md  shanghanlun.md  six-channel.md  stanford.md  tianji-screenshot-evidence.md  tianji.md  yijinjing-screenshot-evidence.md  yijinjing.md  zhongjing-xinfa-screenshot-evidence.md  zhongjing-xinfa.md
scripts/: build_pdf_evidence.py  build_text_evidence.py  ocr_pdf_text.py  search_pdf_evidence.py  search_screenshots.py
tests/: test_answer_quality.py  test_assets.py  test_build_pdf_evidence.py  test_diagnostics.py  test_evaluation.py  test_fusion.py  test_rerank.py  (+5 more)
(+19 files in other folders)
